--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,9 @@
         <div class="col">
           <h4 class="my" id="author" title="GossJS">Наталья <span>Кузнецова</span></h4>
           <h4>DTD</h4>
-          <p>Валидация</p>
+          <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/ifmo-i-intro-nvkuznetsova.git">Репозиторий первого задания</a><br><br>
+          <a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/15092017-nvkuznetsova.git">Репозиторий с заданиями<br> 15.09 и 22.09</a>
+        </p>
 
           <h4>Схемы</h4>
           <p>Валидация</p>
