add mathML and mathJax

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 
         <div class="col">
           <h4>Стили</h4>
-          <p>Преобразования...</p>
+          <p><a class="btn btn-lg btn-success" target="_blank" href="math.xml">MathML и MathJax</a></p>
 
           <h4>SVG</h4>
           <p>Ещё результаты...</p>
