--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
           <p><a class="btn btn-lg btn-success" target="_blank" href="math.xml">MathML и MathJax</a></p>
 
           <h4>SVG</h4>
-          <p>Ещё результаты...</p>
+          <p><a href="svg.xml" class="btn btn-success" target="_blank">SVG</a></p>
 
          </div>
       </div>
