--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,12 @@
 
           <h4>SVG</h4>
           <p><a href="svg.xml" class="btn btn-success" target="_blank">SVG</a></p>
+		
+	 <h4>Тема ВКР:</h4>
+          <p>Сравнительный анализ методологий разработки на платформе PHP</p>
+		
+	 h4>Тема НИР:</h4>
+          <p>Сравнительный анализ методологий разработки на платформе PHP. Этап 1: анализ отечественных и зарубежных источников по теме исследования</p>	
 
          </div>
       </div>
