--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 	 <h4>Тема ВКР:</h4>
           <p>Сравнительный анализ методологий разработки на платформе PHP</p>
 		
-	 h4>Тема НИР:</h4>
+	 <h4>Тема НИР:</h4>
           <p>Сравнительный анализ методологий разработки на платформе PHP. Этап 1: анализ отечественных и зарубежных источников по теме исследования</p>	
 
          </div>
