--- a/public/index.html
+++ b/public/index.html
@@ -63,15 +63,17 @@
           <p><a href="svg.xml" class="btn btn-success" target="_blank">SVG</a></p>
 
          </div>
-         <div class="col">
-           <h4>Тема ВКР:</h4>
-                  <p>Сравнительный анализ методологий разработки на платформе PHP</p>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h4>Тема ВКР:</h4>
+                 <p>Сравнительный анализ методологий разработки на платформе PHP</p>
 
-        	 <h4>Тема НИР:</h4>
-                  <p>Сравнительный анализ методологий разработки на платформе PHP. Этап 1: анализ отечественных и зарубежных источников по теме исследования</p>
-           <h4>Презентация-отчет</h4>
-           <p><a class="btn btn-danger" href="https://drive.google.com/open?id=1-OCrYXQupQv_VFLzsuw_omKg1mir_ooHzaVeP5to2gg">Отчет</a></p>
-         </div>
+          <h4>Тема НИР:</h4>
+                 <p>Сравнительный анализ методологий разработки на платформе PHP. Этап 1: анализ отечественных и зарубежных источников по теме исследования</p>
+          <h4>Презентация-отчет</h4>
+          <p><a class="btn btn-danger" href="https://drive.google.com/open?id=1-OCrYXQupQv_VFLzsuw_omKg1mir_ooHzaVeP5to2gg">Отчет</a></p>
+        </div>
       </div>
 
       <footer class="footer">
