--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,8 @@
 
           <h4>Тема НИР:</h4>
                  <p>Сравнительный анализ методологий разработки на платформе PHP. Этап 1: анализ отечественных и зарубежных источников по теме исследования</p>
-          <h4>Презентация-отчет</h4>
+          <br>
+          <h4><span>Презентация-отчет</span></h4>
           <p><a class="btn btn-danger" href="https://drive.google.com/open?id=1-OCrYXQupQv_VFLzsuw_omKg1mir_ooHzaVeP5to2gg">Отчет</a></p>
         </div>
       </div>
