--- a/public/index.html
+++ b/public/index.html
@@ -42,32 +42,25 @@
       </div>
 
       <div class="row marketing">
-        <div class="col">
-          <h4 class="my" id="author" title="GossJS">Наталья <span>Кузнецова</span></h4>
+        <h4 class="my" id="author" title="GossJS">Наталья <span>Кузнецова</span></h4>
+        <p>Задания 1 семестра</p>
+        <div class="colmd-6">
           <h4>DTD</h4>
           <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/ifmo-i-intro-nvkuznetsova.git">Репозиторий первого задания</a><br><br>
           <a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/15092017-nvkuznetsova.git">Репозиторий с заданиями<br> 15.09 и 22.09</a>
         </p>
-
-          <h4>Схемы</h4>
-          <p>Валидация</p>
-
-          </div>
-
-        <div class="col">
+      </div>
+        <div class="col-md-6">
           <h4>Стили</h4>
           <p><a class="btn btn-lg btn-success" target="_blank" href="math.xml">MathML и MathJax</a></p>
-
           <h4>SVG</h4>
           <p><a href="svg.xml" class="btn btn-success" target="_blank">SVG</a></p>
-
          </div>
       </div>
       <div class="row">
         <div class="col">
           <h4>Тема ВКР:</h4>
-                 <p>Сравнительный анализ методологий разработки на платформе PHP</p>
-
+             <p>Сравнительный анализ методологий разработки на платформе PHP</p>
           <h4>Тема НИР:</h4>
                  <p>Сравнительный анализ методологий разработки на платформе PHP. Этап 1: анализ отечественных и зарубежных источников по теме исследования</p>
           <br><hr>
