--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,11 @@
       </div>
 
       <div class="row marketing">
-        <h4 class="my" id="author" title="GossJS">Наталья <span>Кузнецова</span></h4>
-        <p>Задания 1 семестра</p>
-        <div class="colmd-6">
+        <div class="col-md-12">
+          <h4 class="my" id="author" title="GossJS">Наталья <span>Кузнецова</span></h4>
+          <p>Задания 1 семестра</p>
+        </div>
+        <div class="col-md-6">
           <h4>DTD</h4>
           <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/ifmo-i-intro-nvkuznetsova.git">Репозиторий первого задания</a><br><br>
           <a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/15092017-nvkuznetsova.git">Репозиторий с заданиями<br> 15.09 и 22.09</a>
