--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,12 @@
 
     <meta name="author" content="Наталья Кузнецова">
     <link rel="shortcut icon" href="/favicon.ico">
-
     <title>Мои задания</title>
-    <style> body {padding-top: 50px;} </style>
-
 
 	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="/css/boo.css">
    <link rel="stylesheet" href="/css/my.css">
+   <link rel="stylesheet" href="/css/style.css">
 
   </head>
   <body>
@@ -44,7 +42,7 @@
       <div class="row marketing">
         <div class="col-md-12">
           <h4 class="my" id="author" title="GossJS">Наталья <span>Кузнецова</span></h4>
-          <p>Задания 1 семестра</p>
+          <p class="sem">Задания 1 семестра</p>
         </div>
         <div class="col-md-6">
           <h4>DTD</h4>
@@ -60,7 +58,7 @@
          </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-md-12">
           <h4>Тема ВКР:</h4>
              <p>Сравнительный анализ методологий разработки на платформе PHP</p>
           <h4>Тема НИР:</h4>
@@ -69,6 +67,23 @@
           <h4 class="my"><span>Презентация-отчет</span></h4>
           <p><a class="btn btn-danger" target="_blank" href="https://drive.google.com/open?id=1-OCrYXQupQv_VFLzsuw_omKg1mir_ooHzaVeP5to2gg">Отчет</a></p>
         </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <p class="sem">Здания 2 семестра</p>
+        </div>
+        <div class="col-md-6">
+          <div class="lab">
+            <h4 class="task">Вводная лабораторная работа (09.02.2018)</h4>
+            <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/lab_2sem/tree/master/js1"></a></p>
+          </div>
+          <div class="lab">
+            <h4 class="task">Лабораторная работа 16.02.2018</h4>
+            <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/lab_2sem/tree/master/js2/practice"></a></p>
+          </div>
+          </div>
+        <div class="col-md-6"></div>
       </div>
 
       <footer class="footer">
