--- a/public/index.html
+++ b/public/index.html
@@ -45,42 +45,52 @@
           <p class="sem">Задания 1 семестра</p>
         </div>
         <div class="col-md-6">
-          <h4>DTD</h4>
-          <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/ifmo-i-intro-nvkuznetsova.git">Репозиторий первого задания</a><br><br>
-          <a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/15092017-nvkuznetsova.git">Репозиторий с заданиями<br> 15.09 и 22.09</a>
-        </p>
+          <div class="lab">
+            <h4 class="task">DTD</h4>
+            <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/ifmo-i-intro-nvkuznetsova.git">Репозиторий первого задания</a><br><br>
+            <a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/15092017-nvkuznetsova.git">Репозиторий с заданиями<br> 15.09 и 22.09</a>
+          </p>
+          </div>
       </div>
         <div class="col-md-6">
-          <h4>Стили</h4>
-          <p><a class="btn btn-lg btn-success" target="_blank" href="math.xml">MathML и MathJax</a></p>
-          <h4>SVG</h4>
-          <p><a href="svg.xml" class="btn btn-success" target="_blank">SVG</a></p>
+          <div class="lab">
+            <h4 class="task">Стили</h4>
+            <p><a class="btn btn-lg btn-success" target="_blank" href="math.xml">MathML и MathJax</a></p>
+            <h4>SVG</h4>
+            <p><a href="svg.xml" class="btn btn-success" target="_blank">SVG</a></p>
+          </div>
          </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h4>Тема ВКР:</h4>
-             <p>Сравнительный анализ методологий разработки на платформе PHP</p>
-          <h4>Тема НИР:</h4>
-                 <p>Сравнительный анализ методологий разработки на платформе PHP. Этап 1: анализ отечественных и зарубежных источников по теме исследования</p>
-          <br><hr>
-          <h4 class="my"><span>Презентация-отчет</span></h4>
-          <p><a class="btn btn-danger" target="_blank" href="https://drive.google.com/open?id=1-OCrYXQupQv_VFLzsuw_omKg1mir_ooHzaVeP5to2gg">Отчет</a></p>
+          <div class="lab">
+            <h4 class="task">Тема ВКР:</h4>
+               <p>Сравнительный анализ методологий разработки на платформе PHP</p><hr>
+            <h4 class="task">Тема НИР:</h4>
+              <p>Сравнительный анализ методологий разработки на платформе PHP. Этап 1: анализ отечественных и зарубежных источников по теме исследования</p>
+          </div>
+          <div class="divide"></div>
+          <div class="lab">
+            <h4 class="my"><span>Презентация-отчет</span></h4>
+            <p><a class="btn btn-danger" target="_blank" href="https://drive.google.com/open?id=1-OCrYXQupQv_VFLzsuw_omKg1mir_ooHzaVeP5to2gg">Отчет</a></p>
+          </div>
         </div>
       </div>
 
+      <div class="divide"></div>
+
       <div class="row">
         <div class="col-md-12">
-          <p class="sem">Здания 2 семестра</p>
+          <p class="sem">Здания 2 семестра</p>hr
         </div>
         <div class="col-md-6">
           <div class="lab">
             <h4 class="task">Вводная лабораторная работа (09.02.2018)</h4>
-            <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/lab_2sem/tree/master/js1"></a></p>
+            <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/lab_2sem/tree/master/js1">Репозиторий</a></p>
           </div>
           <div class="lab">
             <h4 class="task">Лабораторная работа 16.02.2018</h4>
-            <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/lab_2sem/tree/master/js2/practice"></a></p>
+            <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/lab_2sem/tree/master/js2/practice">Репозиторий</a></p>
           </div>
           </div>
         <div class="col-md-6"></div>
