--- a/public/index.html
+++ b/public/index.html
@@ -56,20 +56,24 @@
           <div class="lab">
             <h4 class="task">Стили</h4>
             <p><a class="btn btn-lg btn-success" target="_blank" href="math.xml">MathML и MathJax</a></p>
+          </div>
+          <div class="lab">
             <h4>SVG</h4>
             <p><a href="svg.xml" class="btn btn-success" target="_blank">SVG</a></p>
           </div>
          </div>
       </div>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
           <div class="lab">
             <h4 class="task">Тема ВКР:</h4>
-               <p>Сравнительный анализ методологий разработки на платформе PHP</p><hr>
+               <p>Сравнительный анализ методологий разработки на платформе PHP</p>
+               <div class="clearfix divide"></div>
             <h4 class="task">Тема НИР:</h4>
               <p>Сравнительный анализ методологий разработки на платформе PHP. Этап 1: анализ отечественных и зарубежных источников по теме исследования</p>
           </div>
-          <div class="divide"></div>
+        </div>
+        <div class="col-md-6">
           <div class="lab">
             <h4 class="my"><span>Презентация-отчет</span></h4>
             <p><a class="btn btn-danger" target="_blank" href="https://drive.google.com/open?id=1-OCrYXQupQv_VFLzsuw_omKg1mir_ooHzaVeP5to2gg">Отчет</a></p>
@@ -77,7 +81,7 @@
         </div>
       </div>
 
-      <div class="divide"></div>
+      <div class="clearfix divide"></div>
 
       <div class="row">
         <div class="col-md-12">
