--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
       <div class="row marketing">
         <div class="col-md-12">
           <h4 class="my" id="author" title="GossJS">Наталья <span>Кузнецова</span></h4>
+          <div class="clearfix divide"></div>
           <p class="sem">Задания 1 семестра</p>
         </div>
         <div class="col-md-6">
@@ -85,7 +86,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <p class="sem">Здания 2 семестра</p>hr
+          <p class="sem">Здания 2 семестра</p>
         </div>
         <div class="col-md-6">
           <div class="lab">
