--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
           <div class="clearfix divide"></div>
           <p class="sem">Задания 1 семестра</p>
         </div>
-        <div class="col-md-6">
+        <div class="col col-md-6">
           <div class="lab">
             <h4 class="task">DTD</h4>
             <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/ifmo-i-intro-nvkuznetsova.git">Репозиторий первого задания</a><br><br>
@@ -53,7 +53,7 @@
           </p>
           </div>
       </div>
-        <div class="col-md-6">
+        <div class="col col-md-6">
           <div class="lab">
             <h4 class="task">Стили</h4>
             <p><a class="btn btn-lg btn-success" target="_blank" href="math.xml">MathML и MathJax</a></p>
@@ -98,7 +98,30 @@
             <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/lab_2sem/tree/master/js2/practice">Репозиторий</a></p>
           </div>
           </div>
-        <div class="col-md-6"></div>
+        <div class="col-md-6">
+          <div class="lab">
+            <h4 class="task">Лаборатораня работа 02.03.2018 Часть 1</h4>
+               <p><a class="btn btn-info" target="_blank" href="https://codepen.io/nvkuznetsova/pen/XqJOgM?editors=0011">Массивы</a></p>
+               <div class="clearfix divide"></div>
+            <h4 class="task">02.03.2018 Часть 2</h4>
+              <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/lab_2sem/blob/master/README.md">Сборка и транспиляция</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="lab">
+            <h4 class="task">Лабораторные по PHP</h4>
+            <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/php_labs">Репозиторий</a></p>
+            <p><a class="btn btn-info" target="_blank" href="https://shielded-reaches-18569.herokuapp.com/">HerokuApp</a></p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="lab">
+            <h4 class="task">Репозиторий отчет с остальными заданиями</h4>
+            <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/report_2_sem/blob/master/README.md">Отчет</a></p>
+          </div>
+        </div>
       </div>
 
       <footer class="footer">
