--- a/public/index.html
+++ b/public/index.html
@@ -45,15 +45,14 @@
           <div class="clearfix divide"></div>
           <p class="sem">Задания 1 семестра</p>
         </div>
-        <div class="col col-md-6">
+        <div class="col-md-6">
           <div class="lab">
             <h4 class="task">DTD</h4>
-            <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/ifmo-i-intro-nvkuznetsova.git">Репозиторий первого задания</a><br><br>
-            <a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/15092017-nvkuznetsova.git">Репозиторий с заданиями<br> 15.09 и 22.09</a>
-          </p>
+            <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/ifmo-i-intro-nvkuznetsova.git">Репозиторий первого задания</a></p>
+            <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/15092017-nvkuznetsova.git">Репозиторий с заданиями<br> 15.09 и 22.09</a></p>
           </div>
       </div>
-        <div class="col col-md-6">
+        <div class="col-md-6">
           <div class="lab">
             <h4 class="task">Стили</h4>
             <p><a class="btn btn-lg btn-success" target="_blank" href="math.xml">MathML и MathJax</a></p>
@@ -83,6 +82,7 @@
       </div>
 
       <div class="clearfix divide"></div>
+      <div class="clearfix"></div>
 
       <div class="row">
         <div class="col-md-12">
@@ -102,8 +102,9 @@
           <div class="lab">
             <h4 class="task">Лаборатораня работа 02.03.2018 Часть 1</h4>
                <p><a class="btn btn-info" target="_blank" href="https://codepen.io/nvkuznetsova/pen/XqJOgM?editors=0011">Массивы</a></p>
-               <div class="clearfix divide"></div>
-            <h4 class="task">02.03.2018 Часть 2</h4>
+          </div>
+          <div class="lab">
+            <h4 class="task">Лаборатораня работа 02.03.2018 Часть 2</h4>
               <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/lab_2sem/blob/master/README.md">Сборка и транспиляция</a></p>
           </div>
         </div>
@@ -118,8 +119,8 @@
         </div>
         <div class="col-md-6">
           <div class="lab">
-            <h4 class="task">Репозиторий отчет с остальными заданиями</h4>
-            <p><a class="btn btn-info" target="_blank" href="https://github.com/nvkuznetsova/report_2_sem/blob/master/README.md">Отчет</a></p>
+            <h4 class="task"><span>Репозиторий отчет с остальными заданиями<span></h4>
+            <p><a class="btn btn-danger" target="_blank" href="https://github.com/nvkuznetsova/report_2_sem/blob/master/README.md">Отчет</a></p>
           </div>
         </div>
       </div>
