--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
           <div class="lab">
             <h4 class="task">DTD</h4>
             <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/ifmo-i-intro-nvkuznetsova.git">Репозиторий первого задания</a></p>
+            <br>
             <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/15092017-nvkuznetsova.git">Репозиторий с заданиями<br> 15.09 и 22.09</a></p>
           </div>
       </div>
@@ -58,7 +59,7 @@
             <p><a class="btn btn-lg btn-success" target="_blank" href="math.xml">MathML и MathJax</a></p>
           </div>
           <div class="lab">
-            <h4>SVG</h4>
+            <h4 class="task">SVG</h4>
             <p><a href="svg.xml" class="btn btn-success" target="_blank">SVG</a></p>
           </div>
          </div>
@@ -75,7 +76,7 @@
         </div>
         <div class="col-md-6">
           <div class="lab">
-            <h4 class="my"><span>Презентация-отчет</span></h4>
+            <h4 class="my task"><span>Презентация-отчет</span></h4>
             <p><a class="btn btn-danger" target="_blank" href="https://drive.google.com/open?id=1-OCrYXQupQv_VFLzsuw_omKg1mir_ooHzaVeP5to2gg">Отчет</a></p>
           </div>
         </div>
