--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="lab">
+          <div class="lab report">
             <h4 class="my task"><span>Презентация-отчет</span></h4>
             <p><a class="btn btn-danger" target="_blank" href="https://drive.google.com/open?id=1-OCrYXQupQv_VFLzsuw_omKg1mir_ooHzaVeP5to2gg">Отчет</a></p>
           </div>
@@ -118,8 +118,8 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="lab">
-            <h4 class="task"><span>Репозиторий отчет с остальными заданиями<span></h4>
+          <div class="lab report">
+            <h4 class="my task"><span>Репозиторий-отчет<span> с остальными заданиями</h4>
             <p><a class="btn btn-danger" target="_blank" href="https://github.com/nvkuznetsova/report_2_sem/blob/master/README.md">Отчет</a></p>
           </div>
         </div>
