--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
         </div>
         <div class="col-md-6">
           <div class="lab report">
-            <h4 class="my task"><span>Репозиторий-отчет<span> с остальными заданиями</h4>
+            <h4 class="my task"><span>Репозиторий-отчет</span> с остальными заданиями</h4>
             <p><a class="btn btn-danger" target="_blank" href="https://github.com/nvkuznetsova/report_2_sem/blob/master/README.md">Отчет</a></p>
           </div>
         </div>
