--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <div class="jumbotron">
         <h1 class="display-3">Здесь результаты</h1>
         <p class="lead">Пожалуйста, ознакомьтесь!</p>
-        <p><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/" role="button">задания</a></p>
+        <p class="col-md-2"><a class="btn btn-lg btn-success" target="_blank" href="https://github.com/GossJS/" role="button">задания</a></p>
       </div>
 
       <div class="row marketing">
